python-compiler/tests/snapshots/floats__mixed_variable_arithmetic.snap
---
source: tests/floats.rs
assertion_line: 78
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca double, align 8
  %x = alloca double, align 8
  store i64 5, ptr %x, align 4
  store double 2.500000e+00, ptr %y, align 8
  %x1 = load double, ptr %x, align 8
  %y2 = load double, ptr %y, align 8
  %addtmp = fadd double %x1, %y2
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %addtmp)
  ret i32 0
}

declare i32 @printf(ptr, ...)
